# rustc-tools

./: Cargo.toml  HOW_TO.md  LICENSE  README.md  RELEASE.md  rust-toolchain
.github/workflows/: CI.yml
0.3/: crates.js  help.html
0.3/rustc_tools/: enum.Error.html  fn.cargo_integration.html  fn.get_supported_rustc_version.html  fn.lexer.html  fn.with_ast_parser.html  fn.with_lints.html  fn.with_tyctxt.html  index.html  sidebar-items.js
0.3/rustc_tools/ast/: fn.with_ast_parser.html
0.3/rustc_tools/cargo/: fn.cargo_integration.html  fn.get_supported_rustc_version.html
0.3/rustc_tools/lint/: fn.with_lints.html
0.3/src/rustc_tools/: ast.rs.html  cargo.rs.html  hir.rs.html  lib.rs.html  lint.rs.html
0.31/: search-index.js  settings.html  src-files.js
0.31/rustc_tools/: all.html  fn.cargo_integration.html  fn.with_lints.html  index.html
0.31/rustc_tools/hir/: fn.with_tyctxt.html
0.31/src/rustc_tools/: cargo.rs.html  lib.rs.html
0.78/: help.html  search-index.js  settings.html
0.78/rustc_tools/: all.html  enum.Error.html  fn.cargo_integration.html  fn.get_supported_rustc_version.html  fn.lexer.html  fn.with_ast_parser.html  fn.with_lints.html  fn.with_tyctxt.html  index.html
0.78/src/rustc_tools/: ast.rs.html  cargo.rs.html  hir.rs.html  lib.rs.html  lint.rs.html
0.80/: help.html  search-index.js  settings.html  src-files.js
0.80/rustc_tools/: all.html  enum.Error.html  fn.cargo_integration.html  fn.get_supported_rustc_version.html  fn.lexer.html  fn.with_ast_parser.html  fn.with_lints.html  fn.with_tyctxt.html  index.html
0.80/search.desc/rustc_tools/: rustc_tools-desc-0-.js
0.80/src/rustc_tools/: ast.rs.html  cargo.rs.html  hir.rs.html  lib.rs.html  lint.rs.html
0.83/doc/: crates.js  help.html  search-index.js  settings.html  src-files.js
0.83/doc/rustc_tools/: all.html  enum.Error.html  fn.cargo_integration.html  fn.get_supported_rustc_version.html  fn.lexer.html  fn.with_ast_parser.html  fn.with_lints.html  (+2 more)
asset/: example_file.rs
examples/: README.md  ast.rs  hir.rs  lint.rs
examples/with-cargo-integration/: Cargo.toml  README.md
examples/with-cargo-integration/cargo-tools-inner/: Cargo.toml  README.md  rust-toolchain
examples/with-cargo-integration/cargo-tools-inner/src/: main.rs  odd_function_line_count.rs  unwrap_call.rs  warn_generics.rs
examples/without-cargo-integration/: ast.rs
src/: ast.rs  cargo.rs  hir.rs  lib.rs  lint.rs
tests/: Cargo.toml
tests/src/: lib.rs
(+86622 files in other folders)
