[package]
name = "rustc-tools"
version = "0.83.0"
authors = ["Guillaume Gomez <guillaume1.gomez@gmail.com>"]

description = "Some internal rustc tools made accessible"
repository = "https://github.com/GuillaumeGomez/rustc-tools"
documentation = "https://guillaumegomez.github.io/rustc-tools/index.html"
license = "MIT"
readme = "README.md"
edition = "2021"

[lib]
name = "rustc_tools"

[dependencies]
term = "0.7"
cargo_metadata = "0.18"

[[example]]
name = "ast"
path = "examples/without-cargo-integration/ast.rs"

[[example]]
name = "hir"
path = "examples/without-cargo-integration/hir.rs"

[[example]]
name = "lint"
path = "examples/without-cargo-integration/lint.rs"
